# rc-digehealth-test

./: .gitignore  README.md  pyproject.toml
src/rc_digehealth_test/classifiers/: __init__.py  conv_model.py
src/rc_digehealth_test/preprocessors/: __init__.py  filters.py  wavelet_event_detector.py
src/rc_digehealth_test/utils/: __init__.py  digehealth_file.py  signal_functions.py
test-data/: README.md
tests/: investigate.py  load_and_test_cnn.py  train_test_classifier.py  train_test_cnn.py  train_test_gbm.py
