[project]
name = "rc-digehealth-test"
version = "0.1.0"
description = ""
authors = [
    {name = "rcardis",email = "rcardis01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "scipy (>=1.16.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "scipy-stubs (>=1.16.1.0,<2.0.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pywavelets (>=1.9.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "onnx (>=1.18.0,<2.0.0)",
    "onnxscript (>=0.3.2,<0.4.0)",
    "onnxruntime (>=1.22.1,<2.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
]

[tool.poetry]
packages = [{include = "rc_digehealth_test", from = "src"}]


[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch-cuda"}
torchaudio = {source = "torch-cuda"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
